add fix some complexing in reservation logic