@@ -1,6 +1,7 @@
 package com.MeetingRoomScheduler.controller;
 
 import com.MeetingRoomScheduler.dto.request.CreateReservationRequest;
+import com.MeetingRoomScheduler.dto.request.UpdateReservationRequest;
 import com.MeetingRoomScheduler.dto.request.UpdateReservationStatusRequest;
 import com.MeetingRoomScheduler.entities.Reservation.*;
 import com.MeetingRoomScheduler.entities.room.Room;
@@ -14,10 +15,13 @@ import io.swagger.v3.oas.annotations.security.SecurityRequirement;
 import jakarta.validation.Valid;
 import lombok.RequiredArgsConstructor;
 import org.springframework.http.HttpStatus;
+import org.springframework.security.access.prepost.PreAuthorize;
 import org.springframework.security.core.annotation.AuthenticationPrincipal;
 import org.springframework.web.bind.annotation.*;
 
 import java.util.List;
+import java.util.stream.Collectors;
+
 import static com.MeetingRoomScheduler.config.SwaggerConfig.BEARER_KEY_SECURITY_SCHEME;
 
 @RequiredArgsConstructor
@@ -35,31 +39,14 @@ public class ReservationController {
             @AuthenticationPrincipal CustomUserDetails currentUser,
             @RequestParam(value = "roomId", required = false) Long roomId,
             @RequestParam(value = "status", required = false) ReservationStatus status) {
-
-        Long userId = currentUser.getId();
-        List<Reservation> reservations;
-
-        if (roomId != null && status != null) {
-            reservations = reservationService.getAllReservations().stream()
-                    .filter(r -> r.getUser().getId().equals(userId))
-                    .filter(r -> r.getRoom().getId().equals(roomId))
-                    .filter(r -> r.getStatus().equals(status))
-                    .toList();
-        } else if (roomId != null) {
-            reservations = reservationService.getReservationsByRoomId(roomId).stream()
-                    .filter(r -> r.getUser().getId().equals(userId))
-                    .toList();
-        } else if (status != null) {
-            reservations = reservationService.getReservationsByStatus(status).stream()
-                    .filter(r -> r.getUser().getId().equals(userId))
-                    .toList();
-        } else {
-            reservations = reservationService.getReservationsByUserId(userId);
-        }
+        List<Reservation> reservations = reservationService.getReservationsByFilters(roomId, status)
+                .stream()
+                .filter(r -> r.getUser().getId().equals(currentUser.getId()))
+                .collect(Collectors.toList());
 
         return reservations.stream()
                 .map(ReservationDto::from)
-                .toList();
+                .collect(Collectors.toList());
     }
 
     @PostMapping
@@ -68,14 +55,10 @@ public class ReservationController {
     public ReservationDto createReservation(
             @AuthenticationPrincipal CustomUserDetails currentUser,
             @Valid @RequestBody CreateReservationRequest request) {
-
         User user = userService.validateAndGetUserByUsername(currentUser.getUsername());
-
-        Room room = roomService.validateAndGetRoom(request.roomId());
-
         Reservation reservation = Reservation.builder()
                 .user(user)
-                .room(room)
+                .room(roomService.validateAndGetRoom(request.roomId()))
                 .startTime(request.startTime())
                 .endTime(request.endTime())
                 .status(ReservationStatus.PENDING)
@@ -84,90 +67,66 @@ public class ReservationController {
         return ReservationDto.from(reservationService.saveReservation(reservation));
     }
 
-    @Operation(security = { @SecurityRequirement(name = BEARER_KEY_SECURITY_SCHEME) })
-    @PutMapping("/{id}/status")
-    public ReservationDto updateReservationStatus(
-            @AuthenticationPrincipal CustomUserDetails currentUser,
+    @PutMapping("/admin/{id}")
+    @PreAuthorize("hasRole('ADMIN')")
+    public ReservationDto updateReservationAdmin(
             @PathVariable Long id,
-            @Valid @RequestBody UpdateReservationStatusRequest request) {
+            @Valid @RequestBody UpdateReservationRequest request) {
+        return ReservationDto.from(reservationService.updateReservationAsAdmin(id, request));
+    }
 
-        Reservation reservation = reservationService.validateAndGetReservation(id);
-
-        // Check if user is admin or owns the reservation
-        if (!currentUser.getAuthorities().stream().anyMatch(auth -> auth.getAuthority().equals("ADMIN")) &&
-                !reservation.getUser().getId().equals(currentUser.getId())) {
-            throw new IllegalStateException("You can only update your own reservations.");
-        }
-
-        Reservation updated = reservationService.updateReservationStatus(id, request.status());
-        return ReservationDto.from(updated);
+    @PutMapping("/user/{id}")
+    @PreAuthorize("hasRole('USER')")
+    public ReservationDto updateReservationUser(
+            @PathVariable Long id,
+            @Valid @RequestBody UpdateReservationRequest request,
+            @AuthenticationPrincipal CustomUserDetails currentUser) {
+        return ReservationDto.from(reservationService.updateReservationAsUser(id, request, currentUser.getUsername()));
     }
 
     @PostMapping("/{id}/cancel")
-    @Operation(security = { @SecurityRequirement(name = BEARER_KEY_SECURITY_SCHEME) })
     public ReservationDto cancelReservation(
             @AuthenticationPrincipal CustomUserDetails currentUser,
             @PathVariable Long id) {
         Reservation reservation = reservationService.validateAndGetReservation(id);
-
-        // Check if user is admin or owns the reservation
-        if (!currentUser.getAuthorities().stream().anyMatch(auth -> auth.getAuthority().equals("ADMIN")) &&
-                !reservation.getUser().getId().equals(currentUser.getId())) {
-            throw new IllegalStateException("You can only cancel your own reservations.");
-        }
-
-        reservationService.cancelReservation(reservation);
-        return ReservationDto.from(reservation);
-    }
-
-    @PostMapping("/{id}/release")
-    @Operation(security = { @SecurityRequirement(name = BEARER_KEY_SECURITY_SCHEME) })
-    public ReservationDto releaseReservation(
-            @AuthenticationPrincipal CustomUserDetails currentUser,
-            @PathVariable Long id) {
-        Reservation reservation = reservationService.validateAndGetReservation(id);
-
-        // Check if user is admin or owns the reservation
-        if (!currentUser.getAuthorities().stream().anyMatch(auth -> auth.getAuthority().equals("ADMIN")) &&
-                !reservation.getUser().getId().equals(currentUser.getId())) {
-            throw new IllegalStateException("You can only release your own reservations.");
-        }
-
-        reservationService.releaseReservationSlot(reservation);
-        return ReservationDto.from(reservation);
+        checkOwnershipOrAdmin(currentUser, reservation);
+        return ReservationDto.from(reservationService.cancelReservation(reservation));
     }
 
     @PostMapping("/{id}/confirm")
-    @Operation(security = { @SecurityRequirement(name = BEARER_KEY_SECURITY_SCHEME) })
     public ReservationDto confirmReservation(
             @AuthenticationPrincipal CustomUserDetails currentUser,
             @PathVariable Long id) {
         Reservation reservation = reservationService.validateAndGetReservation(id);
-
-        // Check if user is admin or owns the reservation
-        if (!currentUser.getAuthorities().stream().anyMatch(auth -> auth.getAuthority().equals("ADMIN")) &&
-                !reservation.getUser().getId().equals(currentUser.getId())) {
-            throw new IllegalStateException("You can only confirm your own reservations.");
-        }
-
-        reservationService.confirmReservation(reservation);
-        return ReservationDto.from(reservation);
+        checkOwnershipOrAdmin(currentUser, reservation);
+        return ReservationDto.from(reservationService.confirmReservation(reservation));
     }
 
-    @Operation(security = { @SecurityRequirement(name = BEARER_KEY_SECURITY_SCHEME) })
+    @PostMapping("/{id}/release")
+    public ReservationDto releaseReservation(
+            @AuthenticationPrincipal CustomUserDetails currentUser,
+            @PathVariable Long id) {
+        Reservation reservation = reservationService.validateAndGetReservation(id);
+        checkOwnershipOrAdmin(currentUser, reservation);
+        return ReservationDto.from(reservationService.releaseReservationSlot(reservation));
+    }
+
     @DeleteMapping("/{id}")
     public ReservationDto deleteReservation(
             @AuthenticationPrincipal CustomUserDetails currentUser,
             @PathVariable Long id) {
         Reservation reservation = reservationService.validateAndGetReservation(id);
-
-        // Check if user is admin or owns the reservation
-        if (!currentUser.getAuthorities().stream().anyMatch(auth -> auth.getAuthority().equals("ADMIN")) &&
-                !reservation.getUser().getId().equals(currentUser.getId())) {
-            throw new IllegalStateException("You can only delete your own reservations.");
-        }
-
+        checkOwnershipOrAdmin(currentUser, reservation);
         reservationService.deleteReservation(reservation);
         return ReservationDto.from(reservation);
+    }
+
+    private void checkOwnershipOrAdmin(CustomUserDetails currentUser, Reservation reservation) {
+        boolean isAdmin = currentUser.getAuthorities().stream()
+                .anyMatch(auth -> auth.getAuthority().equals("ADMIN"));
+        boolean isOwner = reservation.getUser().getId().equals(currentUser.getId());
+        if (!isAdmin && !isOwner) {
+            throw new IllegalStateException("You can only modify your own reservations.");
+        }
     }
 }
